[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Material/Player_Ball.material" type="Material" id=1]
[ext_resource path="res://Assets/Objects/Character_Ball.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/Material/Level.material" type="Material" id=3]
[ext_resource path="res://Assets/Material/Wall.material" type="Material" id=4]
[ext_resource path="res://Assets/Material/Environment/Environment_Cyan.tres" type="Environment" id=5]
[ext_resource path="res://Scripts/Character_mounts.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Character_Animation_Blend.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Character_Tile_Scene.gd" type="Script" id=8]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -1.04875, -1.04875, -1.04916, 2.0975, 2.0975, 2.09833 ),
"array_data": PoolByteArray( 99, 98, 146, 190, 55, 7, 150, 62, 234, 66, 119, 191, 213, 43, 145, 0, 167, 167, 0, 127, 0, 44, 0, 59, 125, 45, 37, 190, 182, 167, 192, 62, 234, 66, 119, 191, 233, 56, 145, 0, 148, 191, 246, 127, 0, 0, 0, 59, 58, 87, 4, 191, 218, 34, 6, 63, 84, 97, 63, 191, 190, 66, 172, 0, 167, 167, 0, 127, 0, 44, 0, 58, 227, 143, 146, 190, 67, 153, 45, 63, 84, 97, 63, 191, 221, 87, 172, 0, 144, 198, 244, 127, 0, 0, 0, 58, 149, 167, 192, 190, 191, 45, 37, 62, 233, 66, 119, 191, 200, 23, 145, 0, 208, 139, 0, 127, 0, 48, 0, 59, 51, 153, 45, 191, 226, 143, 146, 62, 83, 97, 63, 191, 169, 35, 172, 0, 208, 139, 0, 127, 0, 48, 0, 58, 89, 152, 209, 190, 19, 231, 164, 59, 234, 66, 119, 191, 195, 0, 145, 0, 0, 129, 0, 127, 0, 50, 0, 59, 122, 109, 60, 191, 203, 128, 162, 59, 84, 97, 63, 191, 162, 0, 172, 0, 0, 129, 0, 127, 0, 50, 0, 58, 108, 160, 194, 190, 223, 167, 27, 190, 234, 66, 119, 191, 200, 233, 145, 0, 48, 139, 0, 127, 0, 52, 0, 59, 3, 146, 46, 191, 209, 222, 141, 190, 84, 97, 63, 191, 169, 221, 172, 0, 48, 139, 0, 127, 0, 52, 0, 58, 58, 7, 150, 190, 96, 98, 146, 190, 233, 66, 119, 191, 213, 213, 145, 0, 89, 167, 0, 127, 0, 53, 0, 59, 219, 34, 6, 191, 56, 87, 4, 191, 84, 97, 63, 191, 190, 190, 172, 0, 89, 167, 0, 127, 0, 53, 0, 58, 191, 45, 37, 190, 149, 167, 192, 190, 233, 66, 119, 191, 233, 200, 145, 0, 117, 208, 0, 127, 0, 54, 0, 59, 227, 143, 146, 190, 51, 153, 45, 191, 84, 97, 63, 191, 221, 169, 172, 0, 117, 208, 0, 127, 0, 54, 0, 58, 19, 231, 164, 187, 89, 152, 209, 190, 234, 66, 119, 191, 0, 195, 145, 0, 127, 0, 0, 127, 0, 55, 0, 59, 179, 128, 162, 187, 122, 109, 60, 191, 84, 97, 63, 191, 0, 162, 172, 0, 127, 0, 0, 127, 0, 55, 0, 58, 223, 167, 27, 62, 108, 160, 194, 190, 234, 66, 119, 191, 23, 200, 145, 0, 117, 48, 0, 127, 0, 56, 0, 59, 209, 222, 141, 62, 3, 146, 46, 191, 84, 97, 63, 191, 35, 169, 172, 0, 117, 48, 0, 127, 0, 56, 0, 58, 96, 98, 146, 62, 58, 7, 150, 190, 233, 66, 119, 191, 43, 213, 145, 0, 89, 89, 0, 127, 128, 56, 0, 59, 56, 87, 4, 63, 219, 34, 6, 191, 84, 97, 63, 191, 66, 190, 172, 0, 89, 89, 0, 127, 128, 56, 0, 58, 149, 167, 192, 62, 191, 45, 37, 190, 233, 66, 119, 191, 56, 233, 145, 0, 48, 117, 0, 127, 0, 57, 0, 59, 51, 153, 45, 63, 227, 143, 146, 190, 84, 97, 63, 191, 87, 221, 172, 0, 48, 117, 0, 127, 0, 57, 0, 58, 89, 152, 209, 62, 23, 231, 164, 187, 234, 66, 119, 191, 61, 0, 145, 0, 0, 126, 0, 127, 128, 57, 0, 59, 122, 109, 60, 63, 179, 128, 162, 187, 84, 97, 63, 191, 94, 0, 172, 0, 0, 127, 0, 127, 128, 57, 0, 58, 108, 160, 194, 62, 32, 168, 27, 62, 234, 66, 119, 191, 56, 23, 145, 0, 208, 117, 0, 127, 0, 58, 0, 59, 3, 146, 46, 63, 208, 222, 141, 62, 84, 97, 63, 191, 87, 35, 172, 0, 208, 117, 0, 127, 0, 58, 0, 58, 56, 7, 150, 62, 98, 98, 146, 62, 234, 66, 119, 191, 43, 43, 145, 0, 167, 89, 0, 127, 128, 58, 0, 59, 218, 34, 6, 63, 57, 87, 4, 63, 84, 97, 63, 191, 66, 66, 172, 0, 167, 89, 0, 127, 128, 58, 0, 58, 191, 45, 37, 62, 149, 167, 192, 62, 233, 66, 119, 191, 23, 56, 145, 0, 139, 48, 0, 127, 0, 59, 0, 59, 227, 143, 146, 62, 51, 153, 45, 63, 83, 97, 63, 191, 35, 87, 172, 0, 139, 48, 0, 127, 0, 59, 0, 58, 33, 231, 164, 59, 89, 152, 209, 62, 234, 66, 119, 191, 0, 61, 145, 0, 129, 0, 0, 127, 128, 59, 0, 59, 201, 128, 162, 59, 122, 109, 60, 63, 84, 97, 63, 191, 0, 94, 172, 0, 129, 0, 0, 127, 128, 59, 0, 58, 125, 45, 37, 190, 182, 167, 192, 62, 234, 66, 119, 191, 233, 56, 145, 0, 134, 226, 10, 127, 0, 60, 0, 59, 227, 143, 146, 190, 67, 153, 45, 63, 84, 97, 63, 191, 221, 87, 172, 0, 136, 219, 12, 127, 0, 60, 0, 58, 17, 169, 45, 191, 118, 8, 48, 63, 44, 101, 209, 190, 173, 83, 211, 0, 167, 167, 0, 127, 0, 44, 0, 57, 42, 90, 192, 190, 116, 206, 99, 63, 43, 101, 209, 190, 211, 109, 211, 0, 141, 205, 248, 127, 0, 0, 0, 57, 99, 206, 99, 191, 74, 90, 192, 62, 45, 101, 209, 190, 147, 45, 211, 0, 208, 139, 0, 127, 0, 48, 0, 57, 63, 69, 119, 191, 195, 185, 214, 59, 42, 101, 209, 190, 138, 0, 211, 0, 0, 129, 0, 127, 0, 50, 0, 57, 19, 23, 101, 191, 34, 39, 186, 190, 41, 101, 209, 190, 147, 211, 211, 0, 48, 139, 0, 127, 0, 52, 0, 57, 118, 8, 48, 191, 17, 169, 45, 191, 44, 101, 209, 190, 173, 173, 211, 0, 89, 167, 0, 127, 0, 53, 0, 57, 75, 90, 192, 190, 99, 206, 99, 191, 44, 101, 209, 190, 211, 147, 211, 0, 117, 208, 0, 127, 0, 54, 0, 57, 163, 185, 214, 187, 79, 69, 119, 191, 44, 101, 209, 190, 0, 138, 211, 0, 127, 0, 0, 127, 0, 55, 0, 57, 34, 39, 186, 62, 19, 23, 101, 191, 41, 101, 209, 190, 45, 147, 211, 0, 117, 48, 0, 127, 0, 56, 0, 57, 17, 169, 45, 63, 118, 8, 48, 191, 44, 101, 209, 190, 83, 173, 211, 0, 89, 89, 0, 127, 128, 56, 0, 57, 99, 206, 99, 63, 75, 90, 192, 190, 44, 101, 209, 190, 109, 211, 211, 0, 48, 117, 0, 127, 0, 57, 0, 57, 79, 69, 119, 63, 163, 185, 214, 187, 44, 101, 209, 190, 118, 0, 211, 0, 0, 127, 0, 127, 128, 57, 0, 57, 19, 23, 101, 63, 34, 39, 186, 62, 41, 101, 209, 190, 109, 45, 211, 0, 208, 117, 0, 127, 0, 58, 0, 57, 117, 8, 48, 63, 17, 169, 45, 63, 44, 101, 209, 190, 83, 83, 211, 0, 167, 89, 0, 127, 128, 58, 0, 57, 41, 90, 192, 62, 100, 206, 99, 63, 43, 101, 209, 190, 45, 109, 211, 0, 139, 48, 0, 127, 0, 59, 0, 57, 213, 185, 214, 59, 79, 69, 119, 63, 44, 101, 209, 190, 0, 118, 211, 0, 129, 0, 0, 127, 128, 59, 0, 57, 42, 90, 192, 190, 116, 206, 99, 63, 43, 101, 209, 190, 211, 109, 211, 0, 138, 211, 8, 127, 0, 60, 0, 57, 121, 133, 60, 191, 200, 42, 63, 63, 216, 247, 8, 188, 167, 89, 0, 0, 167, 167, 0, 127, 0, 44, 0, 56, 57, 241, 208, 190, 235, 83, 119, 63, 241, 247, 8, 188, 208, 117, 0, 0, 139, 208, 0, 127, 0, 0, 0, 56, 219, 83, 119, 191, 90, 241, 208, 62, 221, 247, 8, 188, 139, 48, 0, 0, 208, 139, 0, 127, 0, 48, 0, 56, 126, 61, 134, 191, 98, 121, 239, 59, 48, 248, 8, 188, 129, 0, 0, 0, 0, 129, 0, 127, 0, 50, 0, 56, 112, 194, 120, 191, 128, 7, 202, 190, 90, 248, 8, 188, 139, 208, 0, 0, 48, 139, 0, 127, 0, 52, 0, 56, 201, 42, 63, 191, 120, 133, 60, 191, 216, 247, 8, 188, 167, 167, 0, 0, 89, 167, 0, 127, 0, 53, 0, 56, 91, 241, 208, 190, 219, 83, 119, 191, 249, 247, 8, 188, 208, 139, 0, 0, 117, 208, 0, 127, 0, 54, 0, 56, 125, 113, 239, 187, 126, 61, 134, 191, 187, 247, 8, 188, 0, 129, 0, 0, 127, 0, 0, 127, 0, 55, 0, 56, 131, 7, 202, 62, 112, 194, 120, 191, 79, 248, 8, 188, 48, 139, 0, 0, 117, 48, 0, 127, 0, 56, 0, 56, 137, 133, 60, 63, 200, 42, 63, 191, 20, 248, 8, 188, 89, 167, 0, 0, 89, 89, 0, 127, 128, 56, 0, 56, 219, 83, 119, 63, 91, 241, 208, 190, 249, 247, 8, 188, 117, 208, 0, 0, 48, 117, 0, 127, 0, 57, 0, 56, 126, 61, 134, 63, 125, 113, 239, 187, 187, 247, 8, 188, 127, 0, 0, 0, 0, 127, 0, 127, 128, 57, 0, 56, 112, 194, 120, 63, 131, 7, 202, 62, 79, 248, 8, 188, 117, 48, 0, 0, 208, 117, 0, 127, 0, 58, 0, 56, 200, 42, 63, 63, 137, 133, 60, 63, 0, 248, 8, 188, 89, 89, 0, 0, 167, 89, 0, 127, 128, 58, 0, 56, 56, 241, 208, 62, 235, 83, 119, 63, 81, 248, 8, 188, 48, 117, 0, 0, 139, 48, 0, 127, 0, 59, 0, 56, 186, 113, 239, 59, 126, 61, 134, 63, 211, 247, 8, 188, 0, 127, 0, 0, 129, 0, 0, 127, 128, 59, 0, 56, 57, 241, 208, 190, 235, 83, 119, 63, 241, 247, 8, 188, 208, 117, 0, 0, 139, 208, 0, 127, 0, 60, 0, 56, 33, 157, 46, 191, 31, 85, 49, 63, 147, 115, 201, 62, 173, 83, 45, 0, 167, 167, 0, 127, 0, 44, 0, 54, 12, 6, 194, 190, 62, 47, 101, 63, 147, 115, 201, 62, 211, 109, 45, 0, 141, 205, 8, 127, 0, 0, 0, 54, 45, 47, 101, 191, 46, 6, 194, 62, 147, 115, 201, 62, 147, 45, 45, 0, 208, 139, 0, 127, 0, 48, 0, 54, 13, 221, 120, 191, 162, 12, 246, 59, 149, 115, 201, 62, 138, 0, 45, 0, 0, 129, 0, 127, 0, 50, 0, 54, 207, 167, 102, 191, 125, 235, 186, 190, 150, 115, 201, 62, 147, 211, 45, 0, 48, 139, 0, 127, 0, 52, 0, 54, 31, 85, 49, 191, 33, 157, 46, 191, 147, 115, 201, 62, 173, 173, 45, 0, 89, 167, 0, 127, 0, 53, 0, 54, 47, 6, 194, 190, 44, 47, 101, 191, 147, 115, 201, 62, 211, 147, 45, 0, 117, 208, 0, 127, 0, 54, 0, 54, 75, 12, 246, 187, 29, 221, 120, 191, 146, 115, 201, 62, 0, 138, 45, 0, 127, 0, 0, 127, 0, 55, 0, 54, 125, 235, 186, 62, 207, 167, 102, 191, 150, 115, 201, 62, 45, 147, 45, 0, 117, 48, 0, 127, 0, 56, 0, 54, 32, 157, 46, 63, 31, 85, 49, 191, 149, 115, 201, 62, 83, 173, 45, 0, 89, 89, 0, 127, 128, 56, 0, 54, 45, 47, 101, 63, 45, 6, 194, 190, 147, 115, 201, 62, 109, 211, 45, 0, 48, 117, 0, 127, 0, 57, 0, 54, 29, 221, 120, 63, 75, 12, 246, 187, 146, 115, 201, 62, 118, 0, 45, 0, 0, 127, 0, 127, 128, 57, 0, 54, 207, 167, 102, 63, 125, 235, 186, 62, 150, 115, 201, 62, 109, 45, 45, 0, 208, 117, 0, 127, 0, 58, 0, 54, 31, 85, 49, 63, 33, 157, 46, 63, 148, 115, 201, 62, 83, 83, 45, 0, 167, 89, 0, 127, 128, 58, 0, 54, 11, 6, 194, 62, 45, 47, 101, 63, 150, 115, 201, 62, 45, 109, 45, 0, 139, 48, 0, 127, 0, 59, 0, 54, 5, 12, 246, 59, 29, 221, 120, 63, 146, 115, 201, 62, 0, 118, 45, 0, 129, 0, 0, 127, 128, 59, 0, 54, 12, 6, 194, 190, 62, 47, 101, 63, 147, 115, 201, 62, 211, 109, 45, 0, 138, 211, 248, 127, 0, 60, 0, 54, 209, 21, 6, 191, 7, 153, 8, 63, 182, 74, 60, 63, 190, 66, 84, 0, 167, 167, 0, 127, 0, 44, 0, 52, 127, 198, 149, 190, 5, 39, 48, 63, 182, 74, 60, 63, 221, 87, 84, 0, 144, 198, 12, 127, 0, 0, 0, 52, 243, 38, 48, 191, 126, 198, 149, 62, 183, 74, 60, 63, 169, 35, 84, 0, 208, 139, 0, 127, 0, 48, 0, 52, 223, 102, 63, 191, 3, 105, 227, 59, 182, 74, 60, 63, 162, 0, 84, 0, 0, 129, 0, 127, 0, 50, 0, 52, 32, 131, 49, 191, 178, 53, 143, 190, 181, 74, 60, 63, 169, 221, 84, 0, 48, 139, 0, 127, 0, 52, 0, 52, 8, 153, 8, 191, 208, 21, 6, 191, 182, 74, 60, 63, 190, 190, 84, 0, 89, 167, 0, 127, 0, 53, 0, 52, 126, 198, 149, 190, 243, 38, 48, 191, 183, 74, 60, 63, 221, 169, 84, 0, 117, 208, 0, 127, 0, 54, 0, 52, 168, 105, 227, 187, 222, 102, 63, 191, 183, 74, 60, 63, 0, 162, 84, 0, 127, 0, 0, 127, 0, 55, 0, 52, 181, 53, 143, 62, 32, 131, 49, 191, 181, 74, 60, 63, 35, 169, 84, 0, 117, 48, 0, 127, 0, 56, 0, 52, 208, 21, 6, 63, 8, 153, 8, 191, 182, 74, 60, 63, 66, 190, 84, 0, 89, 89, 0, 127, 128, 56, 0, 52, 243, 38, 48, 63, 126, 198, 149, 190, 183, 74, 60, 63, 87, 221, 84, 0, 48, 117, 0, 127, 0, 57, 0, 52, 222, 102, 63, 63, 170, 105, 227, 187, 183, 74, 60, 63, 94, 0, 84, 0, 0, 127, 0, 127, 128, 57, 0, 52, 32, 131, 49, 63, 181, 53, 143, 62, 181, 74, 60, 63, 87, 35, 84, 0, 208, 117, 0, 127, 0, 58, 0, 52, 8, 153, 8, 63, 208, 21, 6, 63, 182, 74, 60, 63, 66, 66, 84, 0, 167, 89, 0, 127, 128, 58, 0, 52, 125, 198, 149, 62, 244, 38, 48, 63, 182, 74, 60, 63, 35, 87, 84, 0, 139, 48, 0, 127, 0, 59, 0, 52, 221, 105, 227, 59, 222, 102, 63, 63, 182, 74, 60, 63, 0, 94, 84, 0, 130, 0, 0, 127, 128, 59, 0, 52, 127, 198, 149, 190, 5, 39, 48, 63, 182, 74, 60, 63, 221, 87, 84, 0, 136, 219, 244, 127, 0, 60, 0, 52, 99, 98, 146, 190, 55, 7, 150, 62, 234, 66, 119, 63, 213, 43, 111, 0, 167, 167, 0, 127, 0, 44, 0, 48, 126, 45, 37, 190, 182, 167, 192, 62, 234, 66, 119, 63, 233, 56, 111, 0, 148, 191, 10, 127, 0, 0, 0, 48, 150, 167, 192, 190, 189, 45, 37, 62, 234, 66, 119, 63, 200, 23, 111, 0, 208, 139, 0, 127, 0, 48, 0, 48, 88, 152, 209, 190, 197, 231, 164, 59, 234, 66, 119, 63, 195, 0, 111, 0, 0, 129, 0, 127, 0, 50, 0, 48, 108, 160, 194, 190, 220, 167, 27, 190, 234, 66, 119, 63, 200, 233, 111, 0, 48, 139, 0, 127, 0, 52, 0, 48, 55, 7, 150, 190, 99, 98, 146, 190, 234, 66, 119, 63, 213, 213, 111, 0, 89, 167, 0, 127, 0, 53, 0, 48, 189, 45, 37, 190, 150, 167, 192, 190, 234, 66, 119, 63, 233, 200, 111, 0, 117, 208, 0, 127, 0, 54, 0, 48, 197, 231, 164, 187, 88, 152, 209, 190, 234, 66, 119, 63, 0, 195, 111, 0, 127, 0, 0, 127, 0, 55, 0, 48, 220, 167, 27, 62, 108, 160, 194, 190, 234, 66, 119, 63, 23, 200, 111, 0, 117, 48, 0, 127, 0, 56, 0, 48, 99, 98, 146, 62, 55, 7, 150, 190, 234, 66, 119, 63, 43, 213, 111, 0, 89, 89, 0, 127, 128, 56, 0, 48, 150, 167, 192, 62, 189, 45, 37, 190, 234, 66, 119, 63, 56, 233, 111, 0, 48, 117, 0, 127, 0, 57, 0, 48, 88, 152, 209, 62, 199, 231, 164, 187, 234, 66, 119, 63, 61, 0, 111, 0, 0, 126, 0, 127, 128, 57, 0, 48, 108, 160, 194, 62, 31, 168, 27, 62, 234, 66, 119, 63, 56, 23, 111, 0, 208, 117, 0, 127, 0, 58, 0, 48, 55, 7, 150, 62, 99, 98, 146, 62, 234, 66, 119, 63, 43, 43, 111, 0, 167, 89, 0, 127, 128, 58, 0, 48, 189, 45, 37, 62, 150, 167, 192, 62, 234, 66, 119, 63, 23, 56, 111, 0, 139, 48, 0, 127, 0, 59, 0, 48, 222, 231, 164, 59, 88, 152, 209, 62, 234, 66, 119, 63, 0, 61, 111, 0, 129, 0, 0, 127, 128, 59, 0, 48, 126, 45, 37, 190, 182, 167, 192, 62, 234, 66, 119, 63, 233, 56, 111, 0, 134, 226, 246, 127, 0, 60, 0, 48, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 151, 186, 0, 127, 0, 40, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 186, 151, 0, 127, 0, 46, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 232, 132, 0, 127, 0, 49, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 24, 132, 0, 127, 0, 51, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 70, 151, 0, 127, 128, 52, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 105, 186, 0, 127, 128, 53, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 124, 232, 0, 127, 128, 54, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 124, 24, 0, 127, 128, 55, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 105, 70, 0, 127, 64, 56, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 70, 105, 0, 127, 192, 56, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 24, 124, 0, 127, 64, 57, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 232, 124, 0, 127, 192, 57, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 186, 105, 0, 127, 64, 58, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 151, 70, 0, 127, 192, 58, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 132, 24, 0, 127, 64, 59, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 191, 0, 0, 129, 0, 132, 232, 0, 127, 192, 59, 0, 60, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 151, 186, 0, 127, 0, 40, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 186, 151, 0, 127, 0, 46, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 232, 132, 0, 127, 0, 49, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 24, 132, 0, 127, 0, 51, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 70, 151, 0, 127, 128, 52, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 105, 186, 0, 127, 128, 53, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 124, 232, 0, 127, 128, 54, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 124, 24, 0, 127, 128, 55, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 105, 70, 0, 127, 64, 56, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 70, 105, 0, 127, 192, 56, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 24, 124, 0, 127, 64, 57, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 232, 124, 0, 127, 192, 57, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 186, 105, 0, 127, 64, 58, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 151, 70, 0, 127, 192, 58, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 132, 24, 0, 127, 64, 59, 0, 0, 169, 236, 180, 187, 99, 70, 237, 59, 0, 75, 134, 63, 0, 0, 127, 0, 132, 232, 0, 127, 192, 59, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 2, 0, 3, 0, 1, 0, 4, 0, 5, 0, 0, 0, 5, 0, 2, 0, 0, 0, 6, 0, 7, 0, 4, 0, 7, 0, 5, 0, 4, 0, 8, 0, 9, 0, 6, 0, 9, 0, 7, 0, 6, 0, 10, 0, 11, 0, 8, 0, 11, 0, 9, 0, 8, 0, 12, 0, 13, 0, 10, 0, 13, 0, 11, 0, 10, 0, 14, 0, 15, 0, 12, 0, 15, 0, 13, 0, 12, 0, 16, 0, 17, 0, 14, 0, 17, 0, 15, 0, 14, 0, 18, 0, 19, 0, 16, 0, 19, 0, 17, 0, 16, 0, 20, 0, 21, 0, 18, 0, 21, 0, 19, 0, 18, 0, 22, 0, 23, 0, 20, 0, 23, 0, 21, 0, 20, 0, 24, 0, 25, 0, 22, 0, 25, 0, 23, 0, 22, 0, 26, 0, 27, 0, 24, 0, 27, 0, 25, 0, 24, 0, 28, 0, 29, 0, 26, 0, 29, 0, 27, 0, 26, 0, 30, 0, 31, 0, 28, 0, 31, 0, 29, 0, 28, 0, 32, 0, 33, 0, 30, 0, 33, 0, 31, 0, 30, 0, 2, 0, 34, 0, 3, 0, 34, 0, 35, 0, 3, 0, 5, 0, 36, 0, 2, 0, 36, 0, 34, 0, 2, 0, 7, 0, 37, 0, 5, 0, 37, 0, 36, 0, 5, 0, 9, 0, 38, 0, 7, 0, 38, 0, 37, 0, 7, 0, 11, 0, 39, 0, 9, 0, 39, 0, 38, 0, 9, 0, 13, 0, 40, 0, 11, 0, 40, 0, 39, 0, 11, 0, 15, 0, 41, 0, 13, 0, 41, 0, 40, 0, 13, 0, 17, 0, 42, 0, 15, 0, 42, 0, 41, 0, 15, 0, 19, 0, 43, 0, 17, 0, 43, 0, 42, 0, 17, 0, 21, 0, 44, 0, 19, 0, 44, 0, 43, 0, 19, 0, 23, 0, 45, 0, 21, 0, 45, 0, 44, 0, 21, 0, 25, 0, 46, 0, 23, 0, 46, 0, 45, 0, 23, 0, 27, 0, 47, 0, 25, 0, 47, 0, 46, 0, 25, 0, 29, 0, 48, 0, 27, 0, 48, 0, 47, 0, 27, 0, 31, 0, 49, 0, 29, 0, 49, 0, 48, 0, 29, 0, 33, 0, 50, 0, 31, 0, 50, 0, 49, 0, 31, 0, 34, 0, 51, 0, 35, 0, 51, 0, 52, 0, 35, 0, 36, 0, 53, 0, 34, 0, 53, 0, 51, 0, 34, 0, 37, 0, 54, 0, 36, 0, 54, 0, 53, 0, 36, 0, 38, 0, 55, 0, 37, 0, 55, 0, 54, 0, 37, 0, 39, 0, 56, 0, 38, 0, 56, 0, 55, 0, 38, 0, 40, 0, 57, 0, 39, 0, 57, 0, 56, 0, 39, 0, 41, 0, 58, 0, 40, 0, 58, 0, 57, 0, 40, 0, 42, 0, 59, 0, 41, 0, 59, 0, 58, 0, 41, 0, 43, 0, 60, 0, 42, 0, 60, 0, 59, 0, 42, 0, 44, 0, 61, 0, 43, 0, 61, 0, 60, 0, 43, 0, 45, 0, 62, 0, 44, 0, 62, 0, 61, 0, 44, 0, 46, 0, 63, 0, 45, 0, 63, 0, 62, 0, 45, 0, 47, 0, 64, 0, 46, 0, 64, 0, 63, 0, 46, 0, 48, 0, 65, 0, 47, 0, 65, 0, 64, 0, 47, 0, 49, 0, 66, 0, 48, 0, 66, 0, 65, 0, 48, 0, 50, 0, 67, 0, 49, 0, 67, 0, 66, 0, 49, 0, 51, 0, 68, 0, 52, 0, 68, 0, 69, 0, 52, 0, 53, 0, 70, 0, 51, 0, 70, 0, 68, 0, 51, 0, 54, 0, 71, 0, 53, 0, 71, 0, 70, 0, 53, 0, 55, 0, 72, 0, 54, 0, 72, 0, 71, 0, 54, 0, 56, 0, 73, 0, 55, 0, 73, 0, 72, 0, 55, 0, 57, 0, 74, 0, 56, 0, 74, 0, 73, 0, 56, 0, 58, 0, 75, 0, 57, 0, 75, 0, 74, 0, 57, 0, 59, 0, 76, 0, 58, 0, 76, 0, 75, 0, 58, 0, 60, 0, 77, 0, 59, 0, 77, 0, 76, 0, 59, 0, 61, 0, 78, 0, 60, 0, 78, 0, 77, 0, 60, 0, 62, 0, 79, 0, 61, 0, 79, 0, 78, 0, 61, 0, 63, 0, 80, 0, 62, 0, 80, 0, 79, 0, 62, 0, 64, 0, 81, 0, 63, 0, 81, 0, 80, 0, 63, 0, 65, 0, 82, 0, 64, 0, 82, 0, 81, 0, 64, 0, 66, 0, 83, 0, 65, 0, 83, 0, 82, 0, 65, 0, 67, 0, 84, 0, 66, 0, 84, 0, 83, 0, 66, 0, 68, 0, 85, 0, 69, 0, 85, 0, 86, 0, 69, 0, 70, 0, 87, 0, 68, 0, 87, 0, 85, 0, 68, 0, 71, 0, 88, 0, 70, 0, 88, 0, 87, 0, 70, 0, 72, 0, 89, 0, 71, 0, 89, 0, 88, 0, 71, 0, 73, 0, 90, 0, 72, 0, 90, 0, 89, 0, 72, 0, 74, 0, 91, 0, 73, 0, 91, 0, 90, 0, 73, 0, 75, 0, 92, 0, 74, 0, 92, 0, 91, 0, 74, 0, 76, 0, 93, 0, 75, 0, 93, 0, 92, 0, 75, 0, 77, 0, 94, 0, 76, 0, 94, 0, 93, 0, 76, 0, 78, 0, 95, 0, 77, 0, 95, 0, 94, 0, 77, 0, 79, 0, 96, 0, 78, 0, 96, 0, 95, 0, 78, 0, 80, 0, 97, 0, 79, 0, 97, 0, 96, 0, 79, 0, 81, 0, 98, 0, 80, 0, 98, 0, 97, 0, 80, 0, 82, 0, 99, 0, 81, 0, 99, 0, 98, 0, 81, 0, 83, 0, 100, 0, 82, 0, 100, 0, 99, 0, 82, 0, 84, 0, 101, 0, 83, 0, 101, 0, 100, 0, 83, 0, 85, 0, 102, 0, 86, 0, 102, 0, 103, 0, 86, 0, 87, 0, 104, 0, 85, 0, 104, 0, 102, 0, 85, 0, 88, 0, 105, 0, 87, 0, 105, 0, 104, 0, 87, 0, 89, 0, 106, 0, 88, 0, 106, 0, 105, 0, 88, 0, 90, 0, 107, 0, 89, 0, 107, 0, 106, 0, 89, 0, 91, 0, 108, 0, 90, 0, 108, 0, 107, 0, 90, 0, 92, 0, 109, 0, 91, 0, 109, 0, 108, 0, 91, 0, 93, 0, 110, 0, 92, 0, 110, 0, 109, 0, 92, 0, 94, 0, 111, 0, 93, 0, 111, 0, 110, 0, 93, 0, 95, 0, 112, 0, 94, 0, 112, 0, 111, 0, 94, 0, 96, 0, 113, 0, 95, 0, 113, 0, 112, 0, 95, 0, 97, 0, 114, 0, 96, 0, 114, 0, 113, 0, 96, 0, 98, 0, 115, 0, 97, 0, 115, 0, 114, 0, 97, 0, 99, 0, 116, 0, 98, 0, 116, 0, 115, 0, 98, 0, 100, 0, 117, 0, 99, 0, 117, 0, 116, 0, 99, 0, 101, 0, 118, 0, 100, 0, 118, 0, 117, 0, 100, 0, 1, 0, 119, 0, 0, 0, 0, 0, 120, 0, 4, 0, 4, 0, 121, 0, 6, 0, 6, 0, 122, 0, 8, 0, 8, 0, 123, 0, 10, 0, 10, 0, 124, 0, 12, 0, 12, 0, 125, 0, 14, 0, 14, 0, 126, 0, 16, 0, 16, 0, 127, 0, 18, 0, 18, 0, 128, 0, 20, 0, 20, 0, 129, 0, 22, 0, 22, 0, 130, 0, 24, 0, 24, 0, 131, 0, 26, 0, 26, 0, 132, 0, 28, 0, 28, 0, 133, 0, 30, 0, 30, 0, 134, 0, 32, 0, 102, 0, 135, 0, 103, 0, 104, 0, 136, 0, 102, 0, 105, 0, 137, 0, 104, 0, 106, 0, 138, 0, 105, 0, 107, 0, 139, 0, 106, 0, 108, 0, 140, 0, 107, 0, 109, 0, 141, 0, 108, 0, 110, 0, 142, 0, 109, 0, 111, 0, 143, 0, 110, 0, 112, 0, 144, 0, 111, 0, 113, 0, 145, 0, 112, 0, 114, 0, 146, 0, 113, 0, 115, 0, 147, 0, 114, 0, 116, 0, 148, 0, 115, 0, 117, 0, 149, 0, 116, 0, 118, 0, 150, 0, 117, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 672,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 151
}

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
params_diffuse_mode = 1
params_specular_mode = 4
params_blend_mode = 1
albedo_color = Color( 0.258824, 0.258824, 0.258824, 1 )

[sub_resource type="Animation" id=3]
resource_name = "collision"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Rot_Z/Rot_X:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -8.53774e-07, -0.25, 0, 0.25, 0, -5.5, -0.25, 0, 0.25, 0, -5.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.8, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Rot_Z:rotation_degrees:z")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "turnleft"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "turnright"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "turnleft"

[sub_resource type="AnimationNodeBlendSpace1D" id=9]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = -1.0
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = 1.0
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = -1.0

[sub_resource type="AnimationNodeBlendTree" id=10]
graph_offset = Vector2( -379, 102 )
nodes/left_right_blend/node = SubResource( 9 )
nodes/left_right_blend/position = Vector2( -140, 160 )
nodes/output/position = Vector2( 380, 160 )
node_connections = [ "output", 0, "left_right_blend" ]

[sub_resource type="QuadMesh" id=11]
size = Vector2( 100, 100 )

[node name="Character_Tile_Scene" type="Spatial"]
script = ExtResource( 8 )

[node name="character" type="Spatial" parent="."]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 1.15, 0 )

[node name="Ball" type="MeshInstance" parent="character"]
visible = false
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="Outline" type="MeshInstance" parent="character/Ball"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Character_mounts" type="Spatial" parent="character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.53674e-07, 1.45435e-05 )
visible = false
script = ExtResource( 6 )

[node name="Rot_Z" type="Spatial" parent="character/Character_mounts"]

[node name="Rot_X" type="Spatial" parent="character/Character_mounts/Rot_Z"]
transform = Transform( 1, 0, 0, 0, 1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 0, 0 )

[node name="mount_right" type="Position3D" parent="character/Character_mounts/Rot_Z/Rot_X"]
transform = Transform( 1, 0, 5.68434e-14, 0, 1, -1.49012e-08, -5.68434e-14, 1.49012e-08, 1, 0, 0, 0 )

[node name="mount_antina" type="Position3D" parent="character/Character_mounts/Rot_Z/Rot_X"]
transform = Transform( 1, 0, 5.68434e-14, 0, 1, -1.49012e-08, -5.68434e-14, 1.49012e-08, 1, 0, 0.106881, 1.14465 )

[node name="mount_left" type="Position3D" parent="character/Character_mounts/Rot_Z/Rot_X"]
transform = Transform( 1, 0, -5.68434e-14, 0, 1, 1.49012e-08, -5.68434e-14, 1.49012e-08, -1, 0, 0, 0 )

[node name="Chanacter_Animation" type="AnimationPlayer" parent="character/Character_mounts"]
anims/collision = SubResource( 3 )
anims/turnleft = SubResource( 4 )
anims/turnright = SubResource( 5 )

[node name="Character_Animation_Blend" type="AnimationTree" parent="character/Character_mounts"]
tree_root = SubResource( 10 )
anim_player = NodePath("../Chanacter_Animation")
parameters/left_right_blend/blend_position = 0.998201
script = ExtResource( 7 )

[node name="Back_Wall" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.6513 )
mesh = SubResource( 11 )
material/0 = ExtResource( 4 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 43.6721 )
visible = false
mesh = SubResource( 11 )
material/0 = ExtResource( 3 )

[node name="Side_Wall" type="MeshInstance" parent="."]
transform = Transform( 2.65431e-14, -1.62921e-07, 1, -1, -1.62921e-07, 0, 1.62921e-07, -1, -1.62921e-07, -9, 0, 43.672 )
visible = false
mesh = SubResource( 11 )
material/0 = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.897766, -6.3842e-08, 0.440472, -0.295281, 0.742023, 0.60184, -0.32684, -0.670375, 0.666163, 0, 7.81383, 8.00698 )
shadow_enabled = true
shadow_bias = -0.2
shadow_reverse_cull_face = true

[node name="Camera_pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.973, 17.319, 0 )

[node name="Camera" type="Camera" parent="Camera_pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.53674e-07, -0.000299454, 54 )
keep_aspect = 0
environment = ExtResource( 5 )
fov = 35.0
